# pAPI

./: .gitignore  404.html  README.md  config.example.yaml  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml  sitemap.xml  test-config.yaml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy_family_tree.yml  doc_deploy.yml
addons/family_tree/: __init__.py  manifest.yaml
addons/odoo/: manifest.yaml  routes.py
build-in-addons/image_storage/: index.html
build-in-addons/user_auth_system/: index.html
docs/: index.md
docs/build-in-addons/: image_storage.md  user_auth_system.md
docs/reference/: cli.md  db.md  models.md  router.md  settings.md
docs/tutorials/: hello_world.md  hello_world_2.md  weather.md  weather_mongodb.md  weather_sqlalchemy.md  website.md
examples/family_tree/: manifest.yaml
extra_addons/family_tree/: __init__.py  setup.py
extra_addons/hello_world/: __init__.py  router.py
extra_addons/weather/: manifest.yaml  router.py
extra_apps/hello_world/: __init__.py  manifest.yaml
functionalities/image_storage/: __init__.py
functionalities/user_auth_system/: setup.py
papi/: __init__.py  cli.py
papi/core/: __init__.py  addons.py  apps.py  exceptions.py  init.py  logger.py  mcp.py  response.py  router.py  settings.py  utils.py
reference/cli/: index.html
reference/db/: index.html
reference/models/: index.html
reference/router/: index.html
reference/settings/: index.html
search/: search_index.json
src/papi/: __init__.py  papi_cli.py  run_server.py
tutorials/hello_world/: index.html
tutorials/hello_world_2/: index.html
tutorials/weather/: __init__.py  crud.py  index.html  models.py
(+155 files in other folders)
